# CALL-M_core

./: .gitignore  .gitmodules  LICENSE  README.md  install_dependancies.sh  notes_last_update.txt  ssh_key.pub.txt  tools.xlsx
Hardware_doc/: Intel_NUC_13_Pro_Kit.txt
chrony/: chrony.conf.client  chrony.conf.server  chrony.conf.servor
launches/: call_m_simu_start_full.launch.py
resources/: .$Diagram.drawio.bkp  Diagram.drawio
robot_ws_ros2/: .data  Diagram.drawio  README.md  build_all.sh  build_robot.sh  clean_build.sh  clean_build_all.sh  clean_build_robot.sh  colcon_n_export.sh  colcon_n_export_n_update.sh  export_NUC_JETSON_pkgs.sh  run_CLIENT.sh  run_robot.sh  shutdown_robot.sh  test.xacro  update_exports.sh
robot_ws_ros2/exports/call_m_JETSON_pkgs/call_m_hardware/: CMakeLists.txt  package.xml
robot_ws_ros2/exports/call_m_JETSON_pkgs/call_m_hardware/call_m_drivers/config/: cam1_zedm.yaml
robot_ws_ros2/exports/call_m_JETSON_pkgs/call_m_hardware/config/: cam1_zedm.yaml  cam2_zedm.yaml
robot_ws_ros2/exports/call_m_JETSON_pkgs/call_m_hardware/launch/: bot_JETSON.launch.py
robot_ws_ros2/exports/call_m_JETSON_pkgs/call_m_hardware/src/: bot_control_driver.cpp
robot_ws_ros2/src/c_pkg/: CMakeLists.txt  package.xml
robot_ws_ros2/src/c_pkg/src/: bot_control_driver.cpp  joystick_control.cpp  keyboard_control.cpp  ps3conv2.cpp
robot_ws_ros2/src/call_m_arm/call_m_custom_msgs/: CMakeLists.txt  package.xml
robot_ws_ros2/src/call_m_arm/call_m_custom_msgs/action/: GripperAction.action
robot_ws_ros2/src/call_m_arm/call_m_custom_msgs/msg/: CustomMsg.msg
robot_ws_ros2/src/call_m_arm/call_m_custom_msgs/srv/: ArmMoveToJoints.srv  GenerateCollisionObject.srv  RemoveCollisionObject.srv  SavePointCloud.srv
robot_ws_ros2/src/call_m_arm/gpd_ros2/gpd_ros2_executables/: CMakeLists.txt  package.xml
robot_ws_ros2/src/call_m_arm/gpd_ros2/gpd_ros2_executables/include/gpd_ros2_executables/: grasp_detection_node.h  grasp_detection_server.h  grasp_detection_server_samples.h  grasp_messages.h  grasp_plotter.h
robot_ws_ros2/src/call_m_arm/gpd_ros2/gpd_ros2_executables/src/: grasp_detection_node.cpp  grasp_detection_server.cpp  grasp_detection_server_samples.cpp  grasp_messages.cpp  grasp_plotter.cpp
robot_ws_ros2/src/call_m_arm/gpd_ros2/gpd_ros2_msgs/: CMakeLists.txt  README.md  package.xml
robot_ws_ros2/src/call_m_arm/gpd_ros2/gpd_ros2_msgs/msg/: GraspConfig.msg
robot_ws_ros2/src/call_m_arm/gpd_ros2/gpd_ros2_msgs/srv/: DetectGrasps.srv  DetectGraspsSamples.srv
robot_ws_ros2/src/call_m_arm_pkg/: CMakeLists.txt  README.md  package.xml
robot_ws_ros2/src/call_m_arm_pkg/call_m_arm_pkg/: robotiq_gripper_class.py
robot_ws_ros2/src/call_m_arm_pkg/launch/: call_m_gazebo_control.launch.py  call_m_real_robot_control.launch.py  call_m_services_initializer.launch.py  call_m_visualization.launch.py
robot_ws_ros2/src/call_m_arm_pkg/rviz/: view_robot.rviz  view_urdf.rviz
robot_ws_ros2/src/call_m_arm_pkg/scripts/: auxiliary_servers.py  end_effector_tracker.py  grasping_task_manager_example.py  marker_server_test.py  octomap_enable.py  teleop_twist_eef.py
robot_ws_ros2/src/call_m_arm_pkg/scripts/robotiq_gripper_scripts/: robotiq_gripper_action_server.py  robotiq_gripper_close.py
robot_ws_ros2/src/call_m_arm_pkg/src/: config_file_gen.cpp
robot_ws_ros2/src/call_m_arm_pkg/src/servers/: pointcloud_server.cpp
robot_ws_ros2/src/call_m_arm_pkg/urdf/: dummy.urdf.xacro  origina_ur_robotiq.xacro  sim.urdf.xacro  ur_robotiq.urdf.xacro  ur_robotiq.xacro
robot_ws_ros2/src/call_m_arm_pkg/worlds/: shelf_world  table_can_world
robot_ws_ros2/src/call_m_custom_msgs/: CMakeLists.txt
robot_ws_ros2/src/call_m_custom_msgs/srv/: ArmActivateServo.srv  ArmMoveCartesian.srv  FilterPointCloud.srv  GetEndEffectorPose.srv  GetJointValues.srv  GraspDetection.srv  SetGripperMarker.srv
robot_ws_ros2/src/call_m_hardware/: CMakeLists.txt  package.xml
robot_ws_ros2/src/call_m_hardware/call_m_drivers/: package.xml
robot_ws_ros2/src/call_m_hardware/call_m_drivers/config/: cam1_zedm.yaml  cam2_zedm.yaml  ekf.yaml
robot_ws_ros2/src/call_m_hardware/call_m_drivers/launch/: bot.launch.py  bot_CLIENT.launch.py  bot_JETSON.launch.py  bot_NUC.launch.py
robot_ws_ros2/src/call_m_hardware/call_m_triorb_ros2/: README.md  setup.cfg  setup.py
robot_ws_ros2/src/call_m_hardware/call_m_triorb_ros2/call_m_triorb_ros2/: triorb.py  triorb_v2.py
robot_ws_ros2/src/call_m_hardware/call_m_triorb_ros2/config/: parameters.yaml
robot_ws_ros2/src/call_m_hardware/call_m_triorb_ros2/launch/: triorb_launch.py
robot_ws_ros2/src/call_m_hardware/call_m_triorb_ros2/triorb_ros2/: triorb.py
robot_ws_ros2/src/call_m_hardware/config/: cam1_zedm.yaml  cam2_zedm.yaml  ekf.yaml
robot_ws_ros2/src/call_m_hardware/launch/: bot.launch.py  bot_JETSON.launch.py  bot_NUC.launch.py
robot_ws_ros2/src/call_m_hardware/src/: bot_control_driver.cpp  camera_control_driver.cpp  kin_START21MOVab.txt  kinema.h  servo3moog.h  simulated_clock_publisher.cpp  sonar_range.cpp
robot_ws_ros2/src/call_m_simulation/: CMakeLists.txt  package.xml
robot_ws_ros2/src/call_m_simulation/config/: controllers.yaml  ekf.yaml
robot_ws_ros2/src/call_m_simulation/description/world/: simple_world.sdf  warehouse.world  warehouse_actors.world  warehouse_holes.world
robot_ws_ros2/src/call_m_simulation/launch/: simulation.launch.py
robot_ws_ros2/src/call_m_simulation/src/: simu_bot_driver.cpp  simu_odometry.cpp
robot_ws_ros2/src/included_external_packages/triorb_ros2-main/: README.md  package.xml  setup.py
robot_ws_ros2/src/included_external_packages/triorb_ros2-main/config/: parameters.yaml
robot_ws_ros2/src/included_external_packages/triorb_ros2-main/launch/: triorb_launch.py
robot_ws_ros2/src/included_external_packages/triorb_ros2-main/test/: triorb_test.py
set_up_robot/: 1_Set_up_USER_dev_amd64.sh  2_export_set_up_files.sh  README_instructions.md  Set_up_JETSON.sh  Set_up_NUC.sh  Set_up_all_amd64.sh
tempo sav non ros programs/ips_joystick_control/: CMakeLists.txt
tempo sav non ros programs/ips_joystick_control/src/: ps3con.cpp
(+1122 files in other folders)
