<package format="3">
  <name>call_m_custom_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages, services, and actions for the call_m robot</description>
  <maintainer email="david-vazquezleal@aist.go.jp">David Vazquez</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>tf2_eigen</build_depend>
  <build_depend>visualization_msgs</build_depend>

  
  <exec_depend>eigen3_cmake_module</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <depend>action_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
