<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>triorb_ros2</name>
  <version>0.0.1</version>
  <description>This is a simple control node for TriOrb</description>
  <maintainer email="hara@rt-net.jp">hara</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python-numpy-quaternion-pip</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>lifecycle_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <depend>triorb_core</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
